# accounts-aggregate

./: .gitignore  Cargo.toml  README.md
generator/: Cargo.toml  README.md
generator/src/: main.rs
src/: events.rs  main.rs  models.rs
